updates to views

--- a/public/modules/core/views/main.html
+++ b/public/modules/core/views/main.html
@@ -1,8 +1,9 @@
 <section>
     <h2>This is the main view</h2>
-    <p>Angular 1.4 routing is enabled on this template, you can add more routes in the app.js file</p>
+
+
     <svg>
-        <rect width="50" height="200" style="fill: blue" />
+        <rect width="{{d3W}}" height="200" style="fill: blue" />
     </svg>
 <a href="#/db">Database console</a>
 </section>
