--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
 <title>fast MEAN</title>
 
@@ -16,8 +17,9 @@
 
 </div>
 {% raw %}
-<h1>Bare bones MEAN template</h1>
+<h2>Node Monitor</h2>
 {{helloWorld}}
+
 
 <br>
 <ng-view></ng-view>
@@ -25,6 +27,7 @@
 <script src="js/angular.min.js"></script>
 <script src="js/angular-route.min.js"></script>
 <script src="app.js"></script>
+<script src="modules/dbConsole/dbconsole.client.controller.js"></script>
 
 
 {% endraw %}
