added facebook messenger capability

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
 
-<title>fast MEAN</title>
+<title>Facebook Message Manager</title>
 
 </head>
 
@@ -16,8 +16,7 @@
 
 </div>
 {% raw %}
-<h2>Node Monitor</h2>
-{{helloWorld}}
+
 
 
 <br>
